[gd_scene load_steps=10 format=3 uid="uid://c62u3q4teexqf"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_myd6j"]
[ext_resource type="Texture2D" uid="uid://1a7oau5lh56b" path="res://assets/textures/player_ship.png" id="1_saa6u"]
[ext_resource type="AudioStream" uid="uid://b36m026drdt23" path="res://assets/audio/sfx_laser2.wav" id="3_4xx8c"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qpunr"]
radius = 24.355
height = 48.71

[sub_resource type="Gradient" id="Gradient_ofln1"]
offsets = PackedFloat32Array(0, 0.458128, 1)
colors = PackedColorArray(0.780392, 0.517647, 0.141176, 0, 0.550084, 0.296378, 0.083407, 1, 0.278431, 0.0352941, 0.0156863, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_pkqw0"]
gradient = SubResource("Gradient_ofln1")

[sub_resource type="Curve" id="Curve_4ni1p"]
_data = [Vector2(1e-05, 0.5), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_0fwip"]
curve = SubResource("Curve_4ni1p")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_e8smb"]
lifetime_randomness = 0.3
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 7, 1)
spread = 30.0
initial_velocity_min = -200.0
initial_velocity_max = -200.0
gravity = Vector3(0, 0, 0)
scale_min = 12.0
scale_max = 12.0
scale_curve = SubResource("CurveTexture_0fwip")
color = Color(0.992157, 1, 0.482353, 1)
color_ramp = SubResource("GradientTexture1D_pkqw0")

[node name="Player" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_myd6j")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_saa6u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(6, 0)
shape = SubResource("CapsuleShape2D_qpunr")

[node name="RocketContainer" type="Node" parent="."]

[node name="RocketFired" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_4xx8c")

[node name="RocketTimeout" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="FlameParticleEffect" type="GPUParticles2D" parent="."]
position = Vector2(-31, 0)
amount = 50
process_material = SubResource("ParticleProcessMaterial_e8smb")
lifetime = 0.3
